# TODO_Phase1

./: .gitignore  README.md  pyproject.toml
.claude/agents/: ai-feature-agent.md  backend-manager.md  frontend-manager.md  project-manager.md
.claude/skill/: ai-smart-features.md  backend-development.md  frontend-development.md  project-time-management.md  testing-quality-assurance.md
.specify/memory/: constitution.md
history/prompts/1-cli-todo-app/: 001-phase-i-todo-app-spec.spec.prompt.md  002-implementation-plan-phase-i.plan.prompt.md  003-task-breakdown-phase-i.tasks.prompt.md  004-phase-i-implementation-complete.green.prompt.md
history/prompts/constitution/: 001-phase-i-constitution-creation.constitution.prompt.md
history/prompts/general/: 001-run-pytest-suite.general.prompt.md  002-run-pytest-with-coverage.general.prompt.md  003-uncovered-lines-main-py.general.prompt.md  004-write-interactive-mode-tests.general.prompt.md  005-run-interactive-mode-tests.general.prompt.md  006-check-interactive-mode-output.general.prompt.md
specs/1-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-cli-todo-app/checklists/: requirements.md
specs/1-cli-todo-app/contracts/: cli-interface.md  service-api.md
src/: __init__.py
src/cli/: __init__.py  commands.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  exceptions.py  task_service.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_interactive_mode.py  test_task_service.py
